--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,29 @@
-
 services:
   db:
-    image: postgres:latest
+    image: postgres
     environment:
-      POSTGRES_USER: example_user
-      POSTGRES_PASSWORD: example_password
-      POSTGRES_DB: example_db
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "5432:5432"
+      - "8083:8080"
     volumes:
       - db_data:/var/lib/postgresql/data
   app:
+    image: ${SPRING_APPLICATION_NAME}
     build:
         context: .
         dockerfile: Dockerfile
     ports:
-      - "8080:8080"
-      #TODO: add envirorment variables related to the env
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: ${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
     depends_on:
       - db
-
+volumes:
+    db_data:
